--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"></script>
   <script>
-    const socket = io('https://typerace-backend.onrender.com'); // Replace with your actual backend URL
+    const socket = io('https://typerace-backend-zzuu.onrender.com'); // Replace with your actual backend URL
 
     socket.on('connect', () => {
       console.log('Connected to backend!');
